--- a/package.json
+++ b/package.json
@@ -90,8 +90,8 @@
   },
   "dependencies": {
     "@turf/helpers": "^6.3.0",
-    "better-copy": "^1.0.4",
     "chalk": "^4.1.1",
+    "copy-dir": "^1.3.0",
     "csv-parse": "^4.15.4",
     "csv-stringify": "^5.6.2",
     "lodash-es": "^4.17.21",
