--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "promise-map-series": "^0.3.0",
     "sanitize-filename": "^1.6.3",
     "sqlite": "^4.0.23",
-    "sqlite3": "github:mapbox/node-sqlite3#593c9d",
+    "sqlite3": "git+https://git@github.com/mapbox/node-sqlite3#593c9d",
     "sqlstring-sqlite": "^0.1.1",
     "strip-bom-stream": "^5.0.0",
     "tmp-promise": "^3.0.2",
