--- a/package.json
+++ b/package.json
@@ -67,7 +67,6 @@
   "dependencies": {
     "@turf/helpers": "^6.5.0",
     "chalk": "^4.1.2",
-    "copy-dir": "^1.3.0",
     "csv-parse": "^4.16.3",
     "csv-stringify": "^5.6.5",
     "lodash-es": "^4.17.21",
@@ -75,6 +74,7 @@
     "pluralize": "^8.0.0",
     "pretty-error": "^3.0.4",
     "promise-map-series": "^0.3.0",
+    "recursive-copy": "^2.0.13",
     "sanitize-filename": "^1.6.3",
     "sqlite": "^4.0.23",
     "sqlite3": "git+https://git@github.com/mapbox/node-sqlite3#593c9d",
