--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "recursive-copy": "^2.0.13",
     "sanitize-filename": "^1.6.3",
     "sqlite": "^4.0.23",
-    "sqlite3": "git+https://git@github.com/mapbox/node-sqlite3#593c9d",
+    "sqlite3": "git+https://git@github.com/mapbox/node-sqlite3#918052b",
     "sqlstring-sqlite": "^0.1.1",
     "strip-bom-stream": "^5.0.0",
     "tmp-promise": "^3.0.2",
@@ -86,9 +86,9 @@
     "yargs": "^17.2.1"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "eslint-config-xo": "^0.38.0",
-    "mocha": "^9.1.2",
+    "eslint": "^8.0.1",
+    "eslint-config-xo": "^0.39.0",
+    "mocha": "^9.1.3",
     "should": "^13.2.3"
   },
   "engines": {
