--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "recursive-copy": "^2.0.13",
     "sanitize-filename": "^1.6.3",
     "sqlite": "^4.0.23",
-    "sqlite3": "git+https://git@github.com/mapbox/node-sqlite3#918052b",
+    "sqlite3": "^5.0.2",
     "sqlstring-sqlite": "^0.1.1",
     "strip-bom-stream": "^5.0.0",
     "tmp-promise": "^3.0.2",
