--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
   },
   "dependencies": {
     "@turf/helpers": "^6.5.0",
-    "chalk": "^4.1.2",
+    "@vscode/sqlite3": "^5.0.7",
+    "chalk": "^5.0.0",
     "csv-parse": "^5.0.3",
     "csv-stringify": "^6.0.4",
     "lodash-es": "^4.17.21",
@@ -81,7 +82,6 @@
     "recursive-copy": "^2.0.13",
     "sanitize-filename": "^1.6.3",
     "sqlite": "^4.0.23",
-    "sqlite3": "^5.0.2",
     "sqlstring-sqlite": "^0.1.1",
     "strip-bom-stream": "^5.0.0",
     "tmp-promise": "^3.0.3",
@@ -90,13 +90,13 @@
     "yargs": "^17.2.1"
   },
   "devDependencies": {
-    "dtslint": "^4.2.0",
-    "eslint": "^8.2.0",
+    "dtslint": "^4.2.1",
+    "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-xo": "^0.39.0",
     "husky": "^7.0.4",
     "mocha": "^9.1.3",
-    "prettier": "^2.4.1",
+    "prettier": "^2.5.0",
     "pretty-quick": "^3.1.2",
     "should": "^13.2.3"
   },
