Add nocase to timetables, remove from url fields

--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "Devin Packer",
     "Darius MARTIN",
     "Mike Brocks",
-    "Matt Moran"
+    "Matt Moran",
+    "Daniel Sörlöv"
   ],
   "type": "module",
   "main": "index.js",
