--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "csv-stringify": "^6.0.5",
     "gtfs-realtime-bindings": "^0.0.6",
     "lodash-es": "^4.17.21",
+    "long": "^4.0.0",
     "node-fetch": "^3.2.0",
     "pluralize": "^8.0.0",
     "pretty-error": "^4.0.0",
