--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
   "main": "index.js",
   "bin": {
     "gtfs-export": "bin/gtfs-export.js",
-    "gtfs-import": "bin/gtfs-import.js"
+    "gtfs-import": "bin/gtfs-import.js",
+    "gtfsrealtime-update": "bin/gtfsrealtime-update.js"
   },
   "types": "@types",
   "scripts": {
@@ -74,7 +75,9 @@
     "chalk": "^5.0.1",
     "csv-parse": "^5.0.4",
     "csv-stringify": "^6.0.5",
+    "gtfs-realtime-bindings": "^0.0.6",
     "lodash-es": "^4.17.21",
+    "long": "^4.0.0",
     "node-fetch": "^3.2.3",
     "pluralize": "^8.0.0",
     "pretty-error": "^4.0.0",
