--- a/package.json
+++ b/package.json
@@ -72,7 +72,6 @@
   },
   "dependencies": {
     "@turf/helpers": "^6.5.0",
-    "chalk": "^5.0.1",
     "csv-parse": "^5.1.0",
     "csv-stringify": "^6.1.0",
     "gtfs-realtime-bindings": "^0.0.6",
@@ -91,7 +90,8 @@
     "tmp-promise": "^3.0.3",
     "untildify": "^4.0.0",
     "unzipper": "^0.10.11",
-    "yargs": "^17.5.1"
+    "yargs": "^17.5.1",
+    "yoctocolors": "^1.0.0"
   },
   "devDependencies": {
     "dtslint": "^4.2.1",
