--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "Jean-François Vial <jeff@modulaweb.fr>",
     "wdalrymple",
     "Ivan Yulaev",
+    "Ivy Rose",
     "Adam Pitchie",
     "Daniel Demidov",
     "gerlacdt",
