--- a/package.json
+++ b/package.json
@@ -98,13 +98,13 @@
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.4",
     "dtslint": "^4.2.1",
-    "eslint": "^8.42.0",
+    "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-xo": "^0.43.1",
     "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
     "mocha": "^10.2.0",
-    "prettier": "^2.8.8",
-    "pretty-quick": "^3.1.3",
+    "prettier": "^3.0.0",
     "should": "^13.2.3"
   },
   "engines": {
@@ -122,5 +122,9 @@
   },
   "prettier": {
     "singleQuote": true
+  },
+  "lint-staged": {
+    "*.js": "prettier --write",
+    "*.json": "prettier --write"
   }
 }
