--- a/package.json
+++ b/package.json
@@ -69,10 +69,7 @@
   },
   "types": "@types",
   "scripts": {
-    "dtslint": "dtslint @types",
-    "lint": "eslint **/*.js",
-    "lint-fix": "eslint **/*.js --fix",
-    "test": "eslint **/*.js && NODE_ENV=test mocha ./test/mocha/**/*.js --timeout 2000"
+    "test": "NODE_ENV=test mocha ./test/mocha/**/*.js --timeout 2000"
   },
   "dependencies": {
     "@turf/helpers": "^6.5.0",
@@ -97,11 +94,6 @@
     "yoctocolors": "^1.0.0"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.4",
-    "dtslint": "^4.2.1",
-    "eslint": "^8.44.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-config-xo": "^0.43.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
     "mocha": "^10.2.0",
@@ -126,6 +118,7 @@
   },
   "lint-staged": {
     "*.js": "prettier --write",
+    "*.ts": "prettier --write",
     "*.json": "prettier --write"
   }
 }
