Add documentation on `bounding_box_side_m`

--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "Daniel Sörlöv",
     "Ali Zarghami <alizarghami@gmail.com>",
     "David Abell",
-    "Matthias Feist <matze@matf.de>"
+    "Matthias Feist <matze@matf.de>",
+    "Oliv4945"
   ],
   "type": "module",
   "main": "index.js",
