Documentation on new configuration options

--- a/config-sample-full.json
+++ b/config-sample-full.json
@@ -12,7 +12,9 @@
   "csvOptions": {
     "skip_lines_with_error": true
   },
+  "downloadTimeout": 5000,
   "ignoreDuplicates": false,
+  "ignoreErrors": false,
   "sqlitePath": "/tmp/gtfs",
   "exportPath": "~/path/to/export/gtfs"
 }
