Adjustments to timeframes.txt

--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "Matthias Feist <matze@matf.de>",
     "Oliv4945",
     "Kyle Ramey",
-    "Anton Bracke"
+    "Anton Bracke",
+    "Emma K Alexandra <emma@emma.sh>"
   ],
   "type": "module",
   "main": "index.js",
