--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "sanitize-filename": "^1.6.3",
     "sqlstring-sqlite": "^0.1.1",
     "strip-bom-stream": "^5.0.0",
-    "tmp-promise": "^3.0.3",
+    "tempy": "^3.1.0",
     "untildify": "^5.0.0",
     "yargs": "^17.7.2",
     "yoctocolors": "^2.0.2"
