--- a/package.json
+++ b/package.json
@@ -76,13 +76,13 @@
     "gtfsrealtime-update": "dist/bin/gtfsrealtime-update.js"
   },
   "scripts": {
-    "prepare": "husky install",
+    "prepare": "husky",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "build": "tsup"
   },
   "dependencies": {
     "@turf/helpers": "^7.0.0",
-    "better-sqlite3": "^11.0.0",
+    "better-sqlite3": "^11.1.2",
     "csv-parse": "^5.5.6",
     "csv-stringify": "^6.5.0",
     "gtfs-realtime-bindings": "^1.1.1",
@@ -98,24 +98,24 @@
     "tempy": "^3.1.0",
     "untildify": "^5.0.0",
     "yargs": "^17.7.2",
-    "yoctocolors": "^2.0.2"
+    "yoctocolors": "^2.1.1"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.10",
+    "@types/better-sqlite3": "^7.6.11",
     "@types/geojson": "^7946.0.14",
     "@types/jest": "^29.5.12",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^20.14.9",
+    "@types/node": "^20.14.10",
     "@types/pluralize": "^0.0.33",
     "@types/yargs": "^17.0.32",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.7",
     "prettier": "^3.3.2",
-    "ts-jest": "^29.1.5",
+    "ts-jest": "^29.2.2",
     "ts-node": "^10.9.2",
     "tsup": "^8.1.0",
-    "typescript": "^5.5.2"
+    "typescript": "^5.5.3"
   },
   "engines": {
     "node": ">= 20.11.0"
