Add a new build-watch script

--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
   "scripts": {
     "prepare": "husky",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "build": "tsup"
+    "build": "tsup",
+    "build-watch": "tsup --watch"
   },
   "exports": {
     ".": {
