--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
   "dependencies": {
     "@turf/helpers": "^7.1.0",
     "better-sqlite3": "^11.3.0",
+    "csv": "^6.3.10",
     "csv-parse": "^5.5.6",
     "csv-stringify": "^6.5.1",
     "gtfs-realtime-bindings": "^1.1.1",
