--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "sqlstring-sqlite": "^0.1.1",
     "strip-bom-stream": "^5.0.0",
     "tempy": "^3.1.0",
+    "timer-machine": "^1.1.0",
     "untildify": "^5.0.0",
     "yargs": "^17.7.2",
     "yoctocolors": "^2.1.1"
@@ -119,6 +120,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20",
     "@types/pluralize": "^0.0.33",
+    "@types/timer-machine": "^1.1.3",
     "@types/yargs": "^17.0.33",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
