Improve typescript support for non-standard files

--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "Kyle Ramey",
     "Anton Bracke",
     "Emma K Alexandra <emma@emma.sh>",
-    "Mael <laem@kont.me>"
+    "Mael <laem@kont.me>",
+    "b-e-b-o-o"
   ],
   "type": "module",
   "main": "./dist/index.js",
