--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "Anton Bracke",
     "Emma K Alexandra <emma@emma.sh>",
     "Mael <laem@kont.me>",
-    "b-e-b-o-o"
+    "b-e-b-o-o",
+    "Ben Standaert"
   ],
   "type": "module",
   "main": "./dist/index.js",
@@ -126,7 +127,7 @@
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "lint-staged": "^15.4.3",
-    "prettier": "^3.5.1",
+    "prettier": "^3.5.2",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsup": "^8.3.6",
