--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "Mael <laem@kont.me>",
     "b-e-b-o-o",
     "Ben Standaert",
-    "mattkinnia"
+    "mattkinnia",
+    "Théophile Helleboid <theophile.helleboid@transdev.com>"
   ],
   "type": "module",
   "main": "./dist/index.js",
@@ -96,43 +97,43 @@
     }
   },
   "dependencies": {
-    "@turf/helpers": "^7.2.0",
-    "better-sqlite3": "^12.2.0",
-    "csv-parse": "^6.0.0",
-    "csv-stringify": "^6.6.0",
-    "gtfs-realtime-bindings": "^1.1.1",
-    "lodash-es": "^4.17.21",
-    "long": "^5.3.2",
-    "node-stream-zip": "^1.15.0",
-    "pluralize": "^8.0.0",
-    "pretty-error": "^4.0.0",
-    "promise-map-series": "^0.3.0",
-    "sanitize-filename": "^1.6.3",
-    "sqlstring-sqlite": "^0.1.1",
-    "strip-bom-stream": "^5.0.0",
-    "tempy": "^3.1.0",
-    "timer-machine": "^1.1.0",
-    "untildify": "^5.0.0",
-    "yargs": "^18.0.0",
-    "yoctocolors": "^2.1.1"
+    "@turf/helpers": "7.2.0",
+    "better-sqlite3": "12.2.0",
+    "csv-parse": "6.1.0",
+    "csv-stringify": "6.6.0",
+    "gtfs-realtime-bindings": "1.1.1",
+    "lodash-es": "4.17.21",
+    "long": "5.3.2",
+    "node-stream-zip": "1.15.0",
+    "pluralize": "8.0.0",
+    "pretty-error": "4.0.0",
+    "promise-map-series": "0.3.0",
+    "sanitize-filename": "1.6.3",
+    "sqlstring-sqlite": "0.1.1",
+    "strip-bom-stream": "5.0.0",
+    "tempy": "3.1.0",
+    "timer-machine": "1.1.0",
+    "untildify": "5.0.0",
+    "yargs": "18.0.0",
+    "yoctocolors": "2.1.1"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.13",
-    "@types/geojson": "^7946.0.16",
-    "@types/jest": "^30.0.0",
-    "@types/lodash-es": "^4.17.12",
-    "@types/node": "^22",
-    "@types/pluralize": "^0.0.33",
-    "@types/timer-machine": "^1.1.3",
-    "@types/yargs": "^17.0.33",
-    "husky": "^9.1.7",
-    "jest": "^30.0.4",
-    "lint-staged": "^16.1.2",
-    "prettier": "^3.6.2",
-    "ts-jest": "^29.4.0",
-    "ts-node": "^10.9.2",
-    "tsup": "^8.5.0",
-    "typescript": "~5.8.3"
+    "@types/better-sqlite3": "7.6.13",
+    "@types/geojson": "7946.0.16",
+    "@types/jest": "30.0.0",
+    "@types/lodash-es": "4.17.12",
+    "@types/node": "22",
+    "@types/pluralize": "0.0.33",
+    "@types/timer-machine": "1.1.3",
+    "@types/yargs": "17.0.33",
+    "husky": "9.1.7",
+    "jest": "30.0.5",
+    "lint-staged": "16.1.4",
+    "prettier": "3.6.2",
+    "ts-jest": "29.4.1",
+    "ts-node": "10.9.2",
+    "tsup": "8.5.0",
+    "typescript": "5.9.2"
   },
   "engines": {
     "node": ">= 20.11.0"
