Move tests from Jest to node.js

--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
   },
   "scripts": {
     "prepare": "husky",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test": "node --test --test-reporter=spec src/test/**/*.test.ts",
     "build": "tsup",
     "build-watch": "tsup --watch"
   },
@@ -117,16 +117,12 @@
   "devDependencies": {
     "@types/better-sqlite3": "7.6.13",
     "@types/geojson": "7946.0.16",
-    "@types/jest": "30.0.0",
     "@types/lodash-es": "4.17.12",
     "@types/node": "22",
     "@types/yargs": "17.0.33",
     "husky": "9.1.7",
-    "jest": "30.0.5",
     "lint-staged": "16.1.4",
     "prettier": "3.6.2",
-    "ts-jest": "29.4.1",
-    "ts-node": "10.9.2",
     "tsup": "8.5.0",
     "typescript": "5.9.2"
   },
