--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "b-e-b-o-o",
     "Ben Standaert",
     "mattkinnia",
-    "Théophile Helleboid <theophile.helleboid@transdev.com>"
+    "Théophile Helleboid <theophile.helleboid@transdev.com>",
+    "mishamaliga"
   ],
   "type": "module",
   "main": "./dist/index.js",
@@ -112,7 +113,7 @@
     "strip-bom-stream": "5.0.0",
     "tempy": "3.1.0",
     "yargs": "18.0.0",
-    "yoctocolors": "2.1.1"
+    "yoctocolors": "2.1.2"
   },
   "devDependencies": {
     "@types/better-sqlite3": "7.6.13",
@@ -121,7 +122,7 @@
     "@types/node": "22",
     "@types/yargs": "17.0.33",
     "husky": "9.1.7",
-    "lint-staged": "16.1.4",
+    "lint-staged": "16.1.5",
     "prettier": "3.6.2",
     "tsup": "8.5.0",
     "typescript": "5.9.2"
