--- a/package.json
+++ b/package.json
@@ -85,7 +85,8 @@
     "prepare": "husky",
     "test": "node --test --test-reporter=spec src/test/**/*.test.ts",
     "build": "tsup",
-    "build-watch": "tsup --watch"
+    "build-watch": "tsup --watch",
+    "lint": "eslint \"src/**/*.ts\""
   },
   "exports": {
     ".": {
@@ -116,16 +117,23 @@
     "yoctocolors": "2.1.2"
   },
   "devDependencies": {
+    "@eslint/config-helpers": "0.3.1",
+    "@eslint/eslintrc": "3.3.1",
+    "@eslint/js": "9.34.0",
     "@types/better-sqlite3": "7.6.13",
     "@types/geojson": "7946.0.16",
     "@types/lodash-es": "4.17.12",
     "@types/node": "22",
     "@types/yargs": "17.0.33",
+    "eslint": "9.34.0",
+    "eslint-plugin-react": "7.37.5",
+    "globals": "16.3.0",
     "husky": "9.1.7",
     "lint-staged": "16.1.5",
     "prettier": "3.6.2",
     "tsup": "8.5.0",
-    "typescript": "5.9.2"
+    "typescript": "5.9.2",
+    "typescript-eslint": "8.41.0"
   },
   "engines": {
     "node": ">= 20.11.0"
